# MasterPractical2013

./: README.md
prkt13/: .project
prkt13/src/org/rostlab/master/practical2013/: RunConfiguration.java
prkt13/src/org/rostlab/master/practical2013/alignment/: BlastDatabase.java  ResultViewer.java
results/task02/01-seq-search/search-results/: blastp_BCKDHA.tsv  blastp_BCKDHB.tsv  blastp_DBT.tsv  blastp_DLD.tsv  hhblits_refseq_BCKDHA_protein.fasta.hhr  hhblits_refseq_BCKDHB_protein.fasta.hhr  hhblits_refseq_DBT_protein.fasta.hhr  psiblast-10_iterations_eval_10e-10-refseq_DBT_protein.fasta.tsv  psiblast-2_iterations_eval_0.002-refseq_BCKDHA_protein.fasta.tsv  psiblast-2_iterations_eval_0.002-refseq_BCKDHB_protein.fasta.tsv  psiblast-2_iterations_eval_0.002-refseq_DBT_protein.fasta.tsv  psiblast-2_iterations_eval_0.002-refseq_DLD_protein.fasta.tsv  psiblast-2_iterations_eval_10e-10-refseq_BCKDHA_protein.fasta.tsv  psiblast-2_iterations_eval_10e-10-refseq_BCKDHB_protein.fasta.tsv  psiblast-2_iterations_eval_10e-10-refseq_DBT_protein.fasta.tsv  psiblast-2_iterations_eval_10e-10-refseq_DLD_protein.fasta.tsv
rscripts/: .RData  evalAlign.R
utils/hhr2tsv/: README  configure  configure.ac
utils/hhr2tsv/src/: Makefile.am  Makefile.in
